--- a/Styles.css
+++ b/Styles.css
@@ -187,7 +187,13 @@ body.scrolled .back-to-top {
 }
 
 @media (max-width: 768px) {
-  .contenido-flex {
+  .conten-flex {
     padding: 0 20px;
+    flex-direction: column;
+    align-items: center;
+  }
+  #habilidades, #complementaria, #contacto {
+    width: 100%;  /* para que ocupen todo el ancho disponible en móvil */
+    padding: 20px 10px;
   }
 }
