--- a/Styles.css
+++ b/Styles.css
@@ -197,3 +197,23 @@ body.scrolled .back-to-top {
     padding: 20px 10px;
   }
 }
+
+.boton-flotante-cv {
+  position: fixed;
+  bottom: 100px; /* Para que no se cruce con el botón de volver arriba */
+  right: 20px;
+  background-color: #2196f3;
+  color: #fff;
+  padding: 15px 18px;
+  border-radius: 50%;
+  text-decoration: none;
+  font-size: 24px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  transition: background-color 0.3s ease;
+  z-index: 1000;
+}
+
+.boton-flotante-cv:hover {
+  background-color: #1976d2;
+}
+
